--- a/src/Dashboard/Dashboard/Deashboard.css
+++ b/src/Dashboard/Dashboard/Deashboard.css
@@ -14,3 +14,10 @@
 .navigation-part {
   margin-top: -30px;
 }
+
+.nav-style a {
+  text-decoration: none;
+  margin-left: 10px;
+  font-size: 16px;
+  font-weight: bold;
+}
